# plasma-thunderbolt

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  CMakeLists.txt  README.md  TODO
autotests/: CMakeLists.txt
autotests/data/: default.json
autotests/fakeserver/: CMakeLists.txt  exceptions.h  fakedevice.cpp  fakedevice.h  fakemanager.cpp  fakemanager.h  fakeserver.cpp  fakeserver.h  main.cpp
autotests/kded/: CMakeLists.txt  kdedtest.cpp
autotests/lib/: CMakeLists.txt  devicetest.cpp  managertest.cpp
cmake/: FindBolt.cmake
po/ar/: kcm_bolt.po  kded_bolt.po
po/ast/: kcm_bolt.po  kded_bolt.po
po/az/: kcm_bolt.po  kded_bolt.po
po/be/: kcm_bolt.po  kded_bolt.po
po/bg/: kcm_bolt.po  kded_bolt.po
po/ca/: kcm_bolt.po  kded_bolt.po
po/ca@valencia/: kcm_bolt.po  kded_bolt.po
po/cs/: kcm_bolt.po  kded_bolt.po
po/da/: kcm_bolt.po  kded_bolt.po
po/de/: kcm_bolt.po  kded_bolt.po
po/en_GB/: kcm_bolt.po  kded_bolt.po
po/eo/: kcm_bolt.po  kded_bolt.po
po/es/: kcm_bolt.po  kded_bolt.po
po/et/: kcm_bolt.po  kded_bolt.po
po/eu/: kcm_bolt.po  kded_bolt.po
po/fi/: kcm_bolt.po  kded_bolt.po
po/fr/: kcm_bolt.po  kded_bolt.po
po/ga/: kcm_bolt.po  kded_bolt.po
po/gl/: kcm_bolt.po  kded_bolt.po
po/he/: kcm_bolt.po  kded_bolt.po
po/hi/: kcm_bolt.po  kded_bolt.po
po/hu/: kcm_bolt.po  kded_bolt.po
po/ia/: kcm_bolt.po  kded_bolt.po
po/id/: kcm_bolt.po  kded_bolt.po
po/is/: kcm_bolt.po  kded_bolt.po
po/it/: kcm_bolt.po  kded_bolt.po
po/ja/: kcm_bolt.po  kded_bolt.po
po/ka/: kcm_bolt.po  kded_bolt.po
po/ko/: kcm_bolt.po  kded_bolt.po
po/lt/: kcm_bolt.po  kded_bolt.po
po/lv/: kcm_bolt.po  kded_bolt.po
po/ml/: kcm_bolt.po  kded_bolt.po
po/nl/: kcm_bolt.po  kded_bolt.po
po/nn/: kcm_bolt.po  kded_bolt.po
po/pa/: kcm_bolt.po  kded_bolt.po
po/pl/: kcm_bolt.po  kded_bolt.po
po/pt/: kcm_bolt.po  kded_bolt.po
po/pt_BR/: kcm_bolt.po  kded_bolt.po
po/ro/: kcm_bolt.po  kded_bolt.po
po/ru/: kcm_bolt.po  kded_bolt.po
po/sa/: kcm_bolt.po  kded_bolt.po
po/sk/: kcm_bolt.po  kded_bolt.po
po/sl/: kcm_bolt.po  kded_bolt.po
po/sv/: kcm_bolt.po  kded_bolt.po
po/tr/: kcm_bolt.po  kded_bolt.po
po/ug/: kcm_bolt.po  kded_bolt.po
po/uk/: kcm_bolt.po  kded_bolt.po
po/zh_CN/: kcm_bolt.po  kded_bolt.po
po/zh_TW/: kcm_bolt.po  kded_bolt.po
src/: CMakeLists.txt  dbushelper.h  device.cpp  device.h  devicemodel.cpp  devicemodel.h  enum.cpp  enum.h  exceptions.cpp  manager.cpp  manager.h
src/kcm/: CMakeLists.txt  Messages.sh  kcm_bolt.cpp  kcm_bolt.desktop  kcm_bolt.h  kcm_bolt.json  thunderboltmoduledata.cpp  thunderboltmoduledata.h
src/kcm/package/: metadata.desktop
src/kcm/package/contents/ui/: DeviceList.qml  DeviceView.qml  main.qml  utils.js
src/kcm/ui/: DeviceList.qml  DeviceView.qml  main.qml  utils.js
src/kded/: CMakeLists.txt  Messages.sh  kded_bolt.cpp  kded_bolt.desktop  kded_bolt.h  kded_bolt.json  kded_bolt.notifyrc  main.cpp
src/lib/: CMakeLists.txt  dbushelper.cpp  dbushelper.h  device.cpp  device.h  devicemodel.cpp  devicemodel.h  enum.cpp  enum.h  exceptions.cpp  exceptions.h  manager.cpp  manager.h
